Added some validation tests